...
          updateDraftFilter={updateDraftFilter}
          handleResetFilters={handleResetFilters}
          handleChangeFilters={handleChangeFilters}
        />

        <FlashList
          testID="search-car-list"
          onRefresh={refetchInfiniteData}
          keyboardDismissMode="on-drag"
          refreshing={isRefetching}
          data={cars}
          renderItem={({ item, index }) => {
            return <CarItem item={item} testID={`car-item-${index}`} />;
...
