appId: com.kyrylokap.autoraj
---
- launchApp

- runFlow:
    when:
      visible: "Allow"
    commands:
      - tapOn: "Allow"

- runFlow:
    when:
      visible:
        id: "guest-login-button"
    commands:
      - tapOn:
          id: "guest-login-button"
      - extendedWaitUntil:
          visible:
            id: "search-car-list"
          timeout: 20000

- tapOn: "Search"

- assertVisible:
    id: "car-item-0"

- tapOn:
    id: "car-item-0"

- assertVisible:
    text: "Specifications"

- assertVisible:
    id: "car-detail-back-button"

- assertVisible:
    id: "car-detail-favorite-button"

- tapOn:
    id: "car-detail-back-button"

- assertVisible:
    id: "search-car-list"
