appId: com.kyrylokap.autoraj
---
- launchApp

- runFlow:
    when:
      visible: "Allow"
    commands:
      - tapOn: "Allow"

- runFlow:
    when:
      visible:
        id: "guest-login-button"
    commands:
      - tapOn:
          id: "guest-login-button"
      - extendedWaitUntil:
          visible:
            id: "search-car-list"
          timeout: 20000

- tapOn: "Profile"
- assertVisible:
    id: "profile-screen"

- tapOn: "Settings"

- assertVisible:
    text: "Dark Mode"

- tapOn:
    id: "dark-mode-switch"

- tapOn:
    id: "settings-back-button"

- assertVisible:
    id: "profile-screen"
